# haskell-template

./: .dir-locals.el  .gitattributes  .gitignore  .hlint.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  example.cabal  flake.nix  fourmolu.yaml
generated-nix/: example.nix  http2.nix
scripts/: ci.sh  dump.sh  profiling.sh
src/: Main.hs
